rnsc/test_data/integration/error/parser/type_hints/int/overflow.rns
.class @int 99999999999
.super java/lang/Object
